Fix spacing on names on diffferetn screen sizes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,11 +96,7 @@ body.loaded .landing-overlay {
 }
 
 .landing-date {
-    font-family: 'Bellefair', sans-serif;
-    font-size: 0.8rem;
-    padding-top: 2rem;
-    letter-spacing: 6px;
-    color: #000000;
+   height: 60px;
 }
 
 body.loaded .landing-overlay {
@@ -410,7 +406,7 @@ body.loaded .landing-overlay {
     }
 
     .guy {
-        right: 125px;
+        right: 115px;
     }
 
     .and {
@@ -458,7 +454,7 @@ body.loaded .landing-overlay {
     }
 
     .guy {
-        right: 130px;
+        right: 125px;
     }
 
     .and {
@@ -474,7 +470,7 @@ body.loaded .landing-overlay {
 @media (min-width: 1200px) {
 
     .guy {
-        right: 130px;
+        right: 125px;
     }
 
     .and {
@@ -516,6 +512,7 @@ body.loaded .landing-overlay {
     background-repeat: no-repeat;
     background-position: center;
     padding: 2rem;
+   
 
 
 }
@@ -652,7 +649,7 @@ body.loaded .landing-overlay {
 
 #accommodationTabs .nav-link {
     color: #000000;
-    opacity: 0.7;
+    opacity: 0.8;
     font-family: 'Bellefair', serif;
     font-weight: 100;
     font-size: 1rem;
